# depmap-omics-long-read-rna

./: .dockstore.yml  .env.dist  .gitignore  .pre-commit-config.yaml  README.md  config.toml  deploy.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: run_checks_and_tests.yml
data/: legacy_aligned_bams.tsv  legacy_bams.csv  pb_pre.csv  pilot.csv  tag.csv
depmap_omics_long_read_rna/: __main__.py  types.py
depmap_omics_long_read_rna/utils/: aligned_bams.py  bams.py  delivery_bams.py  gcp.py  metadata.py  onboarding.py  utils.py
dogspa_long_reads/: __main__.py  app.py  types.py
dogspa_long_reads/utils/: bams.py  gcp.py  metadata.py  onboarding.py  terra.py  types.py  utils.py  validators.py
gql/: model.gql  omics_mapping.gql  omics_profile.gql  omics_sequencing.gql  onboarding_job.gql  onboarding_workspace.gql  sequencing_alignment.gql
gumbo_gql_client/: __init__.py  enums.py  get_active_onboarding_workspaces.py  get_models_and_children.py  get_omics_profiles.py  get_omics_sequencings.py  get_onboarding_workspace.py  gumbo_client.py  input_types.py  insert_omics_sequencings.py  insert_onboarding_job.py  insert_sequencing_alignment.py  long_read_sequencing_alignments.py  mapped_short_long_rna_samples.py  omics_mapping.py  set_status.py  short_read_omics_mapping.py
scratch/: cclf_onboarding.py  compare_combined.py  fix_non_eqx.py  gencode.py  id_sr_used.py  manual_ailgned_onboarding.py  move_workflow_outputs.py  move_workflow_outputs_again.py  onboard_legacy_bams.py  populate_delivery_bams.py  rerun.py  seed_legacy.py
scratch/legacy_delivery/: pb_pre.py  pilot.py  tag.py
workflows/align_long_reads/: README.md  align_long_reads.json  align_long_reads.wdl
workflows/align_lr_rna/: align_lr_rna.json  align_lr_rna.wdl
workflows/call_fusions/: README.md  call_fusions.json  call_fusions.wdl
workflows/call_lr_rna_fusions/: call_lr_rna_fusions.json  call_lr_rna_fusions.wdl  call_lr_rna_fusions_inputs.json  samtools_seqtk.Dockerfile
workflows/combine_gtfs/: combine_gtfs.json  combine_gtfs.wdl  combine_gtfs_inputs.json
workflows/common/combine-requantify-tools/: Dockerfile  pyproject.toml
workflows/common/combine-requantify-tools/combine_requantify_tools/: __main__.py  filter_gtf_and_tracking.py  map_transcript_ids.py  process_gtf.py  process_tracking_file.py  types.py  utils.py
workflows/index_bam/: README.md  index_bam.json  index_bam.wdl
workflows/quantify_long_reads/: quantify_long_reads.json  quantify_long_reads.wdl
workflows/quantify_lr_rna/: quantify_lr_rna.json  quantify_lr_rna.wdl  quantify_lr_rna_inputs.json
workflows/requantify_lr_rna/: requantify_lr_rna.json  requantify_lr_rna.wdl  secondpass_isoquant.json  secondpass_isoquant.wdl
workflows/secondpass_quantify_lr_rna/: combine_gtf_pipeline.json  combine_gtf_pipeline.wdl  combine_gtf_pipeline_quoteinputs.json  combined_tools.Dockerfile  secondpass_isoquant.wdl  secondpass_isoquant_quoteinputs.json
