[tool.poetry]
name = "depmap-omics-long-read-rna"
version = "0.1.0"
description = "Depmap Omics Long Read RNA workflows and automation"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.1"
google-cloud-storage = "^2.14.0"
functions-framework = "^3.5.0"
pydantic = "^2.9.2"
numpy = "^2.1.1"
pandas = "^2.2.3"
pandera = {extras = ["strategies"], version = "^0.20.4"}
python-baseconv = "^1.2.2"
google-cloud-logging = "^3.9.0"
python-dotenv = "^1.0.1"
nebelung = "^1.3.0"
typer = "^0.12.5"
google-cloud-secret-manager = "^2.20.2"
ariadne-codegen = "^0.14.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.8"
pyright = "^1.1.382"


[[tool.poetry.source]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "I",  # isort formatting
]
exclude = ["gumbo_gql_client"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["depmap_omics_long_read_rna", "main.py"]
reportInvalidTypeVarUse = "none"
