[tool.poetry]
name = "depmap-omics-long-read-rna"
version = "0.1.0"
description = "Depmap Omics Long Read RNA workflows and automation"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.1"
google-cloud-storage = "^2.19.0"
functions-framework = "^3.8.2"
pydantic = "^2.10.6"
numpy = "^2.2.2"
pandas = "^2.2.3"
pandera = {extras = ["strategies"], version = "^0.22.1"}
python-baseconv = "^1.2.2"
google-cloud-logging = "^3.11.4"
python-dotenv = "^1.0.1"
nebelung = "^2.1.0"
typer = "^0.15.1"
google-cloud-secret-manager = "^2.22.1"
ariadne-codegen = "^0.14.0"
pd-flatten = "^0.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
pyright = "^1.1.393"


[[tool.poetry.source]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "I",  # isort formatting
]
exclude = ["gumbo_gql_client"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["depmap_omics_long_read_rna", "main.py"]
