[project]
name = "depmap-omics-long-read-rna"
version = "0.1.0"
description = "Depmap Omics Long Read RNA workflows and automation"
authors = []
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "tqdm>=4.67.1,<5",
    "functions-framework>=3.8.2,<4",
    "pydantic>=2.10.6,<3",
    "numpy>=2.2.4,<3",
    "pandas>=2.2.3,<3",
    "pandera[strategies]>=0.22.1,<0.23",
    "python-baseconv>=1.2.2,<2",
    "google-cloud-logging>=3.11.4,<4",
    "python-dotenv>=1.0.1,<2",
    "nebelung>=2.9.6,<3",
    "typer>=0.15.2,<0.16",
    "google-cloud-secret-manager>=2.23.2,<3",
    "ariadne-codegen>=0.14.0,<0.15",
    "pd-flatten>=0.1.1,<0.2",
    "google-cloud-storage>=3.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "pyright>=1.1.396,<2",
    "pandas-stubs>=2.3.0.250702",
    "pysam>=0.23.3",
    "pyarrow>=20.0.0",
]

[[tool.uv.index]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = [
    "I",  # isort formatting
]
exclude = ["gumbo_gql_client"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["depmap_omics_long_read_rna", "main.py"]
